# ulirocks

./: .gitignore  Cargo.toml  Procfile  README.md  RustConfig  app.json  healthcheck  run  rust-toolchain
.circleci/: config.yml
blog/: README.md  config.toml  deploy
blog/content/: about.md
blog/content/posts/: cool-programing-languages.md  first-post.md  if-programming-languages-were-moms.md  index_horror.md  mastering-airstrike.md  nodejs-encryption.md
blog/static/: chromebook.sh
public/: 404.html  index.html  index.xml  sitemap.xml
public/about/: index.html
public/posts/: index.html  index.xml
public/posts/cool-programing-languages/: index.html
public/posts/first-post/: index.html
public/posts/if-programming-languages-were-moms/: index.html
public/posts/index_horror/: index.html
public/posts/mastering-airstrike/: index.html
public/posts/nodejs-encryption/: index.html
public/tags/: index.html  index.xml
public/tags/__index/: index.html  index.xml
public/tags/lua/: index.html  index.xml
public/tags/metatable/: index.html  index.xml
public/tags/untagged/: index.html  index.xml
src/: main.rs
www/html/: index.html
