[package]
name = "ulirocks"
version = "0.1.0"
authors = ["Ulisse Mini <ulisse.mini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_contrib]
version = "0.4.2"

[dependencies.rocket]
version = "0.4.2"
